Bug 505869 - Games flicker when window loses focus.
Summary: Games flicker when window loses focus.
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.4.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-20 20:44 UTC by Jonathan Cox
Modified: 2025-07-13 16:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.6
Sentry Crash Report:


Attachments
Flickering looks minor in video, looks much worse on screen. (3.11 MB, video/x-matroska)
2025-06-20 20:44 UTC, Jonathan Cox
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Cox 2025-06-20 20:44:54 UTC
Created attachment 182449 [details]
Flickering looks minor in video, looks much worse on screen.

SUMMARY

I have noticed some games flicker when I alt+tab and the window gains focus. The worst offending case of this is Star Wars The Old Republic (Free to play MMO), EVERY single mouse click I can observe this flicker. The mouse does not get locked to the window and it is most observable here.

I tried turning on/off various desktop effects to see if any of them might have an effect here. I noticed if I enable the Compositing status effect, the Compositing watermark disappears when I see the flicker occur.

When the game loses focus, Compositing turns off and the flicker occurs. If I enable the Show FPS effect, Compositing is always on and the flicker no longer occurs.

I have attempted to take video, it only shows minor changes in color as the mouse gets to the edge of the screen. The flicker "effect" is much worse when observed with the naked eye.

I am unsure which version of KDE this problem started in, but I did observe it some time after March 2025 in the 6.3.x series.

I have noticed this does not seem to affect games that are running natively. It is only observed with games running with Proton. The problem occurs even with older proton versions which have not seen updates in years, which is why I reported it here.


STEPS TO REPRODUCE
1. Use any game with Steam/Proton
2. Let the window lose focus
3.  Observe Flicker

OBSERVED RESULT
Games have terrible flickering if they lose focus and compositing switches off. Especially games that don't lock the mouse, potentially every mouse click causes the window to flicker.

EXPECTED RESULT
No Flickering

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 24 × 13th Gen Intel® Core™ i7-13700K
Memory: 96 GiB of RAM (94.1 GiB usable)
Graphics Processor 1: AMD Radeon RX 9070



ADDITIONAL INFORMATION
Comment 1 Zamundaaa 2025-07-03 14:23:52 UTC
*** Bug 506450 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2025-07-03 14:30:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7867
Comment 3 Adam 2025-07-03 18:02:51 UTC
Workaround is to disable HDR and display color profiles.
Comment 4 Adam 2025-07-04 15:03:35 UTC
I will add, the flicker occurs when the cursor is hidden / shown. You can see it here. The behaviour in WoW is that your cursor isn't hidden until you move it slight when you right click. But any time you rotate the camera with left click or turn your character with right click, when the cursor is hidden the display flashes for a frame.

https://i.imgur.com/9mJbVUk.mp4

This also applies in games like Overwatch when chat is opened (and your cursor is displayed)
Comment 5 Zamundaaa 2025-07-04 15:36:30 UTC
Git commit c4f1bbc5920886083ceb2cd28a0e2ded7557cc9d by Xaver Hugl.
Committed on 04/07/2025 at 15:08.
Pushed by zamundaaa into branch 'master'.

backends/drm: never use DEGAMMA_LUT

It's buggy with all the major graphics vendors. It was already disabled for Intel
and NVidia, but AMD seems to have issues too.
The upcoming COLOR_PIPELINE KMS API will fill the same role in a better way, so this
isn't too big of a loss anyways.

M  +3    -4    src/backends/drm/drm_crtc.cpp
M  +3    -0    src/backends/drm/drm_pipeline.cpp

https://invent.kde.org/plasma/kwin/-/commit/c4f1bbc5920886083ceb2cd28a0e2ded7557cc9d
Comment 6 Zamundaaa 2025-07-05 12:57:31 UTC
Git commit 7b6f27993e09f62ba090b9cd50cc25f4472972a3 by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 05/07/2025 at 10:32.
Pushed by zamundaaa into branch 'Plasma/6.4'.

backends/drm: never use DEGAMMA_LUT

It's buggy with all the major graphics vendors. It was already disabled for Intel
and NVidia, but AMD seems to have issues too.
The upcoming COLOR_PIPELINE KMS API will fill the same role in a better way, so this
isn't too big of a loss anyways.


(cherry picked from commit c4f1bbc5920886083ceb2cd28a0e2ded7557cc9d)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +3    -4    src/backends/drm/drm_crtc.cpp
M  +3    -0    src/backends/drm/drm_pipeline.cpp

https://invent.kde.org/plasma/kwin/-/commit/7b6f27993e09f62ba090b9cd50cc25f4472972a3
Comment 7 Zamundaaa 2025-07-06 22:00:27 UTC
Git commit 3e30650a675f5aa16a8a0770049aecb8993e04f9 by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 05/07/2025 at 10:33.
Pushed by zamundaaa into branch 'Plasma/6.3'.

backends/drm: never use DEGAMMA_LUT

It's buggy with all the major graphics vendors. It was already disabled for Intel
and NVidia, but AMD seems to have issues too.
The upcoming COLOR_PIPELINE KMS API will fill the same role in a better way, so this
isn't too big of a loss anyways.


(cherry picked from commit c4f1bbc5920886083ceb2cd28a0e2ded7557cc9d)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +3    -4    src/backends/drm/drm_crtc.cpp
M  +3    -0    src/backends/drm/drm_pipeline.cpp

https://invent.kde.org/plasma/kwin/-/commit/3e30650a675f5aa16a8a0770049aecb8993e04f9
Comment 8 Adam 2025-07-13 16:15:46 UTC
This is marked as fixed in 6.3.6 but I'm still experiencing this in 6.4.2?
Comment 9 Jonathan Cox 2025-07-13 16:44:48 UTC
(In reply to Adam from comment #8)
> This is marked as fixed in 6.3.6 but I'm still experiencing this in 6.4.2?

The release of 6.4.2 was before the fix was pulled into 6.4 branch, and 6.3.6 dropped after 6.4.2. 6.3.x series is still receiving fixes. I expect 6.4.3 will see the fix, I am patiently waiting myself, I just temporarily disabled HDR on my desktop for gaming.