backends/drm: never use DEGAMMA_LUT

It's buggy with all the major graphics vendors. It was already disabled for Intel
and NVidia, but AMD seems to have issues too.
The upcoming COLOR_PIPELINE KMS API will fill the same role in a better way, so this
isn't too big of a loss anyways.

BUG: 505869