src/backends/drm/drm_pipeline.cpp
@@ -362,6 +362,9 @@ bool DrmPipeline::prepareAtomicModeset(DrmAtomicCommit *commit)
 
     commit->addProperty(m_pending.crtc->active, 1);
     commit->addBlob(m_pending.crtc->modeId, m_pending.mode->blob());
+    if (m_pending.crtc->degammaLut.isValid()) {
+        commit->addProperty(m_pending.crtc->degammaLut, 0);
+    }
 
     return true;
 }
